--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+	<header class="main-header">
+		<nav class="main-navigation">
+			<a class="logo">
+				<img src="img/logo.svg" width="111" height="14" alt="Логотип магазина шаблонов для сайта">
+			</a>
+			<ul class="site-navigation">
+				<li><a href="#">Студия</a></li>
+				<li><a href="#">Клиенты</a></li>
+				<li><a href="#">Магазин</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+			<ul class="user-navigation">
+				<li><a href="">Корзина</a></li>
+			</ul>
+		</nav>
+	</header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
+	<section class="catalog">
+		<h2 class="visually-hidden">Наши услуги</h2>
+		<ul class="catalog-list">
+			<li class="catalog-item">
+				<p>
+					<img src="img/web-sites.jpg" width="200" height="120" alt="Веб-сайты">
+				</p>
+				<h3>
+						<a href="#">Веб-сайты</a>
+				</h3>
+				<p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+				<a class="button" href="#">Заказать</a>
+			</li>
+				<li class="catalog-item">
+				<p>
+					<img src="img/web-sites.jpg" width="200" height="120" alt="Приложения">
+				</p>
+				<h3>
+						<a href="#">Приложения</a>
+				</h3>
+				<p>Покорите топ-10 приложений в<br> AppStore и Goggle Play</p>
+				<a class="button" href="#">Заказать</a>
+			</li>
+				<li class="catalog-item">
+				<p>
+					<img src="img/web-sites.jpg" width="200" height="120" alt="Веб-сайты">
+				</p>
+				<h3>
+						<a href="#">Презентации</a>
+				</h3>
+				<p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+				<a class="button" href="#">Заказать</a>
+			</li>
+			
+		</ul>
+	</section>
+	<footer class="main-footer">
+		<div class="footer-social">
+			<ul>
+				<li><a class="social-button" href="#">ВКонтакте</a></li>
+				<li><a class="social-button" href="#">Фейсбук</a></li>
+				<li><a class="social-button" href="#">Инстаграм</a></li>
+			</ul>
+		</div>
+		<div class="footer-copyright">
+			<p class="footer-h"> Давайте дружить, это выгодно!</p>
+			<p>Скидка 10% для друзей из социальных сетей.</p>
+		</div>
+	</footer>
   </body>
 </html>
