--- a/catalog.html
+++ b/catalog.html
@@ -13,15 +13,16 @@
 			<ul class="site-navigation">
 				<li><a href="#">Студия</a></li>
 				<li><a href="#">Клиенты</a></li>
-				<li><a href="#">Магазин</a></li>
+				<li><a class="curent" href="#">Магазин</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
 				<li><a href="">Корзина</a></li>
 			</ul>
 		</nav>
-		<h1 class="page-title">Магазин готовых шаблонов</h1>
 	</header>
+	<main>
+			<h1 class="page-title">Магазин готовых шаблонов</h1>
 	<section class="filters">
 		<h2 class="visually-hidden">Фильтры</h2>
 		<!-- Здесь будут фильтры -->
@@ -38,19 +39,16 @@
 			<li class="catalog-item"><a href="#"><img src="image/template6.jpg"></a></li>
 		</ul>
 	</section>
-	
-	<footer class="main-footer">
-		<div class="footer-social">
-			<ul>
+	</main>
+<footer class="main-footer">
+			<ul class="footer-social">
 				<li><a class="social-button" href="#">ВКонтакте</a></li>
 				<li><a class="social-button" href="#">Фейсбук</a></li>
 				<li><a class="social-button" href="#">Инстаграм</a></li>
 			</ul>
-		</div>
 		<div class="footer-copyright">
 			<p class="footer-h"> Давайте дружить, это выгодно!</p>
 			<p>Скидка 10% для друзей из социальных сетей.</p>
 		</div>
 	</footer>
-  </body>
 </html>
