--- a/index.html
+++ b/index.html
@@ -21,52 +21,41 @@
 			</ul>
 		</nav>
 	</header>
-
+	<h1 class="visually-hidden">Студия дизайна Nerds</h1>
 
 	<section class="catalog">
 		<h2 class="visually-hidden">Наши услуги</h2>
 		<ul class="catalog-list">
 			<li class="catalog-item">
-				<p>
-					<img src="img/web-sites.jpg" width="200" height="120" alt="Веб-сайты">
-				</p>
 				<h3>
-						<a href="#">Веб-сайты</a>
+						<a class="web-sites" href="#">Веб-сайты</a>
 				</h3>
-				<p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+				<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 				<a class="button" href="#">Заказать</a>
 			</li>
 				<li class="catalog-item">
-				<p>
-					<img src="img/web-sites.jpg" width="200" height="120" alt="Приложения">
-				</p>
 				<h3>
-						<a href="#">Приложения</a>
+						<a class="web-sites" href="#">Приложения</a>
 				</h3>
-				<p>Покорите топ-10 приложений в<br> AppStore и Goggle Play</p>
+				<p>Покорите топ-10 приложений в AppStore и Goggle Play</p>
 				<a class="button" href="#">Заказать</a>
 			</li>
 				<li class="catalog-item">
-				<p>
-					<img src="img/web-sites.jpg" width="200" height="120" alt="Веб-сайты">
-				</p>
 				<h3>
-						<a href="#">Презентации</a>
+						<a class="web-sites" href="#">Презентации</a>
 				</h3>
-				<p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+				<p>Вы даже не подозреваете, насколько вы изумительны!</p>
 				<a class="button" href="#">Заказать</a>
 			</li>
 			
 		</ul>
 	</section>
 	<footer class="main-footer">
-		<div class="footer-social">
-			<ul>
+			<ul class="footer-social">
 				<li><a class="social-button" href="#">ВКонтакте</a></li>
 				<li><a class="social-button" href="#">Фейсбук</a></li>
 				<li><a class="social-button" href="#">Инстаграм</a></li>
 			</ul>
-		</div>
 		<div class="footer-copyright">
 			<p class="footer-h"> Давайте дружить, это выгодно!</p>
 			<p>Скидка 10% для друзей из социальных сетей.</p>
