--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
 	<header class="main-header">
 		<nav class="main-navigation">
-			<a class="logo">
+			<a class="logo" href="logo.html">
 				<img src="img/logo.svg" width="111" height="14" alt="Логотип магазина шаблонов для сайта">
 			</a>
 			<ul class="site-navigation">
@@ -31,12 +31,12 @@
 	<section class="catalog">
 		<h2 class="visually-hidden">Список готовых шаблонов</h2>
 		<ul class="catalog-list">
-			<li class="catalog-item"><a href="#"><img src="image/template1.jpg"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template2.jpg"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template3.jpg"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template4.jpg"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template5.jpg"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template6.jpg"></a></li>
+			<li class="catalog-item"><a href="#"><img src="image/template1.jpg" alt="Шаблон для сайта - город Седона"></a></li>
+			<li class="catalog-item"><a href="#"><img src="image/template2.jpg" alt="Шаблон приложения для телефона"></a></li>
+			<li class="catalog-item"><a href="#"><img src="image/template3.jpg" alt="Шаблон барбершопа Borodinski"></a></li>
+			<li class="catalog-item"><a href="#"><img src="image/template4.jpg" alt="Шаблон изделий ручной работы"></a></li>
+			<li class="catalog-item"><a href="#"><img src="image/template5.jpg" alt="Шаблон сайта для онлайн-обучения"></a></li>
+			<li class="catalog-item"><a href="#"><img src="image/template6.jpg" alt="Шаблон производителя кваса - Кваст"></a></li>
 		</ul>
 	</section>
 	</main>
