--- a/index.html
+++ b/index.html
@@ -1,65 +1,66 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-	<header class="main-header">
-		<nav class="main-navigation">
-			<a class="logo">
-				<img src="img/logo.svg" width="111" height="14" alt="Логотип магазина шаблонов для сайта">
-			</a>
-			<ul class="site-navigation">
-				<li><a href="#">Студия</a></li>
-				<li><a href="#">Клиенты</a></li>
-				<li><a href="#">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-			<ul class="user-navigation">
-				<li><a href="">Корзина</a></li>
-			</ul>
-		</nav>
-	</header>
-	<h1 class="visually-hidden">Студия дизайна Nerds</h1>
-
-	<section class="catalog">
-		<h2 class="visually-hidden">Наши услуги</h2>
-		<ul class="catalog-list">
-			<li class="catalog-item">
-				<h3>
-						<a class="web-sites" href="#">Веб-сайты</a>
-				</h3>
-				<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-				<a class="button" href="#">Заказать</a>
-			</li>
-				<li class="catalog-item">
-				<h3>
-						<a class="web-sites" href="#">Приложения</a>
-				</h3>
-				<p>Покорите топ-10 приложений в AppStore и Goggle Play</p>
-				<a class="button" href="#">Заказать</a>
-			</li>
-				<li class="catalog-item">
-				<h3>
-						<a class="web-sites" href="#">Презентации</a>
-				</h3>
-				<p>Вы даже не подозреваете, насколько вы изумительны!</p>
-				<a class="button" href="#">Заказать</a>
-			</li>
-			
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+</head>
+<body>
+<header class="main-header">
+	<nav class="main-navigation">
+		<a class="logo">
+			<img src="img/logo.svg" width="111" height="14" alt="Логотип магазина шаблонов для сайта">
+		</a>
+		<ul class="site-navigation">
+			<li><a href="#">Студия</a></li>
+			<li><a href="#">Клиенты</a></li>
+			<li><a href="nerds-catalog.psd">Магазин</a></li>
+			<li><a href="#">Контакты</a></li>
 		</ul>
-	</section>
-	<footer class="main-footer">
-			<ul class="footer-social">
-				<li><a class="social-button" href="#">ВКонтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">Инстаграм</a></li>
-			</ul>
-		<div class="footer-copyright">
-			<p class="footer-h"> Давайте дружить, это выгодно!</p>
-			<p>Скидка 10% для друзей из социальных сетей.</p>
-		</div>
-	</footer>
-  </body>
+		<ul class="user-navigation">
+			<li><a href="">Корзина</a></li>
+		</ul>
+	</nav>
+</header>
+<main>
+  <h1 class="visually-hidden">Студия дизайна Nerds</h1>
+
+  <section class="catalog">
+  	<h2 class="visually-hidden">Наши услуги</h2>
+  	<ul class="catalog-list">
+  		<li class="catalog-item">
+  			<h3>
+    					<a class="web-sites" href="#">Веб-сайты</a>
+    			</h3>
+    			<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+    			<a class="button" href="#">Заказать</a>
+  		</li>
+  			<li class="catalog-item">
+    			<h3>
+    					<a class="web-sites" href="#">Приложения</a>
+    			</h3>
+    			<p>Покорите топ-10 приложений в AppStore и Goggle Play</p>
+    			   <a class="button" href="#">Заказать</a>
+  		</li>
+  			<li class="catalog-item">
+    			<h3>
+    					<a class="web-sites" href="#">Презентации</a>
+    			</h3>
+    			<p>Вы даже не подозреваете, насколько вы изумительны!</p>
+    			   <a class="button" href="#">Заказать</a>
+  		</li>
+  	</ul>
+  </section>
+</main>
+<footer class="main-footer">
+		<ul class="footer-social">
+			<li><a class="social-button" href="#">ВКонтакте</a></li>
+			<li><a class="social-button" href="#">Фейсбук</a></li>
+			<li><a class="social-button" href="#">Инстаграм</a></li>
+		</ul>
+	<div class="footer-copyright">
+		<p class="footer-h"> Давайте дружить, это выгодно!</p>
+		<p>Скидка 10% для друзей из социальных сетей.</p>
+	</div>
+</footer>
+</body>
 </html>
