--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
 	<header class="main-header">
 		<nav class="main-navigation">
-			<a class="logo" href="logo.html">
+			<a class="logo" href="index.html">
 				<img src="img/logo.svg" width="111" height="14" alt="Логотип магазина шаблонов для сайта">
 			</a>
 			<ul class="site-navigation">
@@ -31,12 +31,54 @@
 	<section class="catalog">
 		<h2 class="visually-hidden">Список готовых шаблонов</h2>
 		<ul class="catalog-list">
-			<li class="catalog-item"><a href="#"><img src="image/template1.jpg" alt="Шаблон для сайта - город Седона"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template2.jpg" alt="Шаблон приложения для телефона"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template3.jpg" alt="Шаблон барбершопа Borodinski"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template4.jpg" alt="Шаблон изделий ручной работы"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template5.jpg" alt="Шаблон сайта для онлайн-обучения"></a></li>
-			<li class="catalog-item"><a href="#"><img src="image/template6.jpg" alt="Шаблон производителя кваса - Кваст"></a></li>
+      <li class="catalog-item">
+        <a href="#"><img src="image/template1.jpg" alt="Шаблон для сайта - город Седона"></a>
+          <div class="template-hover">
+              <h3>Sedona</h3>
+              <p>Информационный сайт для туристов</p>
+              <a href="#">9 900 руб.</a>
+          </div>
+      </li>
+      <li class="catalog-item">
+        <a href="#"><img src="image/template2.jpg" alt="Шаблон приложения для телефона"></a>
+        <div class="template-hover">
+            <h3>Pink</h3>
+            <p>Приложения для телефона</p>
+            <a href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <a href="#"><img src="image/template3.jpg" alt="Шаблон барбершопа Borodinski"></a>
+        <div class="template-hover">
+            <h3>Borodinski</h3>
+            <p>Барбершоп Borodinski</p>
+            <a href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <a href="#"><img src="image/template4.jpg" alt="Шаблон изделий ручной работы"></a>
+        <div class="template-hover">
+            <h3>Mishka</h3>
+            <p>Вязаные корзинки</p>
+            <a href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <a href="#"><img src="image/template5.jpg" alt="Шаблон сайта для онлайн-обучения"></a>
+        <div class="template-hover">
+            <h3>А+</h3>
+            <p>Сайт для учебы</p>
+            <a href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <a href="#"><img src="image/template6.jpg" alt="Шаблон производителя кваса - Кваст"></a>
+        <div class="template-hover">
+            <h3>Кваст</h3>
+            <p>Крафтовый квас</p>
+            <a href="#">9 900 руб.</a>
+        </div>
+      </li>
 		</ul>
 	</section>
 	</main>
