--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="logo" href="index.html">
-				<img src="img/logo.svg" width="111" height="14" alt="Логотип магазина шаблонов для сайта">
+      <img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="#">Студия</a></li>
@@ -32,7 +32,7 @@
 		<h2 class="visually-hidden">Список готовых шаблонов</h2>
 		<ul class="catalog-list">
       <li class="catalog-item">
-        <a href="#"><img src="image/template1.jpg" alt="Шаблон для сайта - город Седона"></a>
+        <a href="#"><img src="img/img-sedona.jpg" width="360" height="576"  alt="Шаблон для сайта - город Седона"></a>
           <div class="template-hover">
               <h3>Sedona</h3>
               <p>Информационный сайт для туристов</p>
@@ -40,7 +40,7 @@
           </div>
       </li>
       <li class="catalog-item">
-        <a href="#"><img src="image/template2.jpg" alt="Шаблон приложения для телефона"></a>
+        <a href="#"><img src="img/img-pink.jpg"  width="360" height="576"  alt="Шаблон приложения для телефона"></a>
         <div class="template-hover">
             <h3>Pink</h3>
             <p>Приложения для телефона</p>
@@ -48,7 +48,7 @@
         </div>
       </li>
       <li class="catalog-item">
-        <a href="#"><img src="image/template3.jpg" alt="Шаблон барбершопа Borodinski"></a>
+        <a href="#"><img src="img/img-barbershop.jpg"  width="360" height="576"  alt="Шаблон барбершопа Borodinski"></a>
         <div class="template-hover">
             <h3>Borodinski</h3>
             <p>Барбершоп Borodinski</p>
@@ -56,7 +56,7 @@
         </div>
       </li>
       <li class="catalog-item">
-        <a href="#"><img src="image/template4.jpg" alt="Шаблон изделий ручной работы"></a>
+        <a href="#"><img src="img/img-mishka.jpg"  width="360" height="576"  alt="Шаблон изделий ручной работы"></a>
         <div class="template-hover">
             <h3>Mishka</h3>
             <p>Вязаные корзинки</p>
@@ -64,7 +64,7 @@
         </div>
       </li>
       <li class="catalog-item">
-        <a href="#"><img src="image/template5.jpg" alt="Шаблон сайта для онлайн-обучения"></a>
+        <a href="#"><img src="img/img-aplus.jpg"  width="360" height="576"  alt="Шаблон сайта для онлайн-обучения"></a>
         <div class="template-hover">
             <h3>А+</h3>
             <p>Сайт для учебы</p>
@@ -72,7 +72,7 @@
         </div>
       </li>
       <li class="catalog-item">
-        <a href="#"><img src="image/template6.jpg" alt="Шаблон производителя кваса - Кваст"></a>
+        <a href="#"><img src="img/img-kvast.jpg"  width="360" height="576"   alt="Шаблон производителя кваса - Кваст"></a>
         <div class="template-hover">
             <h3>Кваст</h3>
             <p>Крафтовый квас</p>
