--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <header class="main-header">
 	<nav class="main-navigation">
 		<a class="logo">
-			<img src="img/logo.svg" width="111" height="14" alt="Логотип магазина шаблонов для сайта">
+			<img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
 		</a>
 		<ul class="site-navigation">
 			<li><a href="#">Студия</a></li>
