--- a/index.html
+++ b/index.html
@@ -26,31 +26,34 @@
 
   <section class="catalog">
   	<h2 class="visually-hidden">Наши услуги</h2>
-  	<ul class="catalog-list">
-  		<li class="catalog-item">
-  			<h3>
-    					<a class="web-sites" href="#">Веб-сайты</a>
-    			</h3>
-    			<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-    			<a class="button" href="#">Заказать</a>
-  		</li>
-  			<li class="catalog-item">
+    	<ul class="catalog-list">
+    		<li class="catalog-item">
     			<h3>
-    					<a class="web-sites" href="#">Приложения</a>
-    			</h3>
-    			<p>Покорите топ-10 приложений в AppStore и Goggle Play</p>
-    			   <a class="button" href="#">Заказать</a>
-  		</li>
-  			<li class="catalog-item">
-    			<h3>
-    					<a class="web-sites" href="#">Презентации</a>
-    			</h3>
-    			<p>Вы даже не подозреваете, насколько вы изумительны!</p>
-    			   <a class="button" href="#">Заказать</a>
-  		</li>
-  	</ul>
+      			<a class="web-sites" href="#">Веб-сайты</a>
+      		</h3>
+      			<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a class="button" href="#">Заказать</a> 
+    		</li>
+
+    		<li class="catalog-item">
+      		<h3>
+      			<a class="web-sites" href="#">Приложения</a>
+      		</h3>
+      			<p>Покорите топ-10 приложений в AppStore и Goggle Play</p>
+      			 <a class="button" href="#">Заказать</a>
+    		</li>
+
+    		<li class="catalog-item">
+      		<h3>
+      			 <a class="web-sites" href="#">Презентации</a>
+      		</h3>
+      			 <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+      			 <a class="button" href="#">Заказать</a>
+    		</li>
+    	</ul>
   </section>
 </main>
+
 <footer class="main-footer">
 		<ul class="footer-social">
 			<li><a class="social-button" href="#">ВКонтакте</a></li>
@@ -62,5 +65,30 @@
 		<p>Скидка 10% для друзей из социальных сетей.</p>
 	</div>
 </footer>
+
+<section class="feedback">
+  <h2>Напишите нам</h2>
+    <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+        <label>
+          <p class=feeback-p> Ваше имя:
+            <input type="text" name="name" value="" placeholder="Имя Фамилия">
+          </p>
+        </label>
+
+        <label>
+          <p class=feeback-p> Ваш e-mail:
+            <input type="email" name="email" value="" placeholder="email@example.com">
+          </p>
+      </label>
+        
+        <label>
+          <p class=feeback-p> Текст письма:
+            <input type="text" name="message" value="" placeholder="В свободной форме">
+          </p>
+      </label>
+      <button class="form-buttom" type="submit">Отправить</button>
+    </form>
+</section>
+
 </body>
 </html>
