--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+ 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
@@ -20,6 +22,7 @@
 				<li><a href="">Корзина</a></li>
 			</ul>
 		</nav>
+		
 	</header>
 	<main>
 			<h1 class="page-title">Магазин готовых шаблонов</h1>
