--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+<link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <title>HTML Academy: Нёрдс</title>
 </head>
 <body>
@@ -32,7 +34,7 @@
       			<a class="web-sites" href="#">Веб-сайты</a>
       		</h3>
       			<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a class="button" href="#">Заказать</a> 
+              <a class="button button-red" href="#">Заказать</a> 
     		</li>
 
     		<li class="catalog-item">
@@ -40,7 +42,7 @@
       			<a class="web-sites" href="#">Приложения</a>
       		</h3>
       			<p>Покорите топ-10 приложений в AppStore и Goggle Play</p>
-      			 <a class="button" href="#">Заказать</a>
+      			 <a class="button button-green" href="#">Заказать</a>
     		</li>
 
     		<li class="catalog-item">
@@ -48,7 +50,7 @@
       			 <a class="web-sites" href="#">Презентации</a>
       		</h3>
       			 <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-      			 <a class="button" href="#">Заказать</a>
+      			 <a class="button button-yellow" href="#">Заказать</a>
     		</li>
     	</ul>
   </section>
