--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
 <footer class="main-footer">
 		<ul class="footer-social">
-			<li><a class="social-button" href="#">ВКонтакте</a></li>
-			<li><a class="social-button" href="#">Фейсбук</a></li>
-			<li><a class="social-button" href="#">Инстаграм</a></li>
+			<li><a class="social-button visually-hidden" href="#">ВКонтакте</a></li>
+			<li><a class="social-button visually-hidden" href="#">Фейсбук</a></li>
+			<li><a class="social-button visually-hidden" href="#">Инстаграм</a></li>
 		</ul>
 
 		<div class="footer-copyright">
