--- a/catalog.html
+++ b/catalog.html
@@ -164,15 +164,15 @@
 
 	<footer class="main-footer">
 			<ul class="footer-social">
-				<li><a class="social-button" href="#">ВКонтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">Инстаграм</a></li>
+				<li><a class="social-button visually-hidden" href="#">ВКонтакте</a></li>
+				<li><a class="social-button visually-hidden" href="#">Фейсбук</a></li>
+				<li><a class="social-button visually-hidden" href="#">Инстаграм</a></li>
 			</ul>
 
-		<div class="footer-copyright">
-			<p class="footer-h"> Давайте дружить, это выгодно!</p>
-			<p>Скидка 10% для друзей из социальных сетей.</p>
-		</div>
+			<div class="footer-copyright">
+				<p class="footer-h"> Давайте дружить, это выгодно!</p>
+				<p>Скидка 10% для друзей из социальных сетей.</p>
+			</div>
 	</footer>
   
  	<section class="feedback">
