--- a/catalog.html
+++ b/catalog.html
@@ -83,22 +83,22 @@
                     	</label>
                 	</li>
                  
-					<li class="filter-option">      
+                  <li class="filter-option">      
                     	<input class="filter-checkbox" type="checkbox" id="gallary" name="gallary"> 
-                        <label for="gallary">
-						Галерея
+                      <label for="gallary">
+						            Галерея
                       </label>
                     </li>
                
                     <li class="filter-option">          
-                        <input class="filter-checkbox" type="checkbox" name="basket"> 
-                        <label>
+                        <input class="filter-checkbox" type="checkbox" id="basket" name="basket"> 
+                        <label for="basket">
                         Корзина
                     	</label>
                     </li>
               </ul>
         </fieldset>
-            <button type="submit" class="filter-button">Показать</button>
+            <button type="submit" class="button filter-button">Показать</button>
           </form>
 	</section>
 
