--- a/catalog.html
+++ b/catalog.html
@@ -108,7 +108,7 @@
       		<li class="catalog-item">
         		<a href="#"><img src="img/img-sedona.jpg" width="360" height="576"  alt="Шаблон для сайта - город Седона"></a>
           		<div class="template-hover">
-              		<h3>Sedona</h3>
+                  <h3><a class="template-hover-link" href="#">Sedona</a></h3>
               		<p>Информационный сайт для туристов</p>
               		<a href="#">9 900 руб.</a>
           		</div>
@@ -117,7 +117,7 @@
       		<li class="catalog-item">
        			<a href="#"><img src="img/img-pink.jpg"  width="360" height="576"  alt="Шаблон приложения для телефона"></a>
         		<div class="template-hover">
-            		<h3>Pink</h3>
+            		<h3><a class="template-hover-link" href="#">Pink</a></h3>
 		            <p>Приложения для телефона</p>
 		            <a href="#">9 900 руб.</a>
         		</div>
@@ -126,7 +126,7 @@
      		 <li class="catalog-item">
 			    <a href="#"><img src="img/img-barbershop.jpg"  width="360" height="576"  alt="Шаблон барбершопа Borodinski"></a>
 		        <div class="template-hover">
-            		<h3>Borodinski</h3>
+            		<h3><a class="template-hover-link" href="#">Borodinski</a></h3>
             		<p>Барбершоп Borodinski</p>
             		<a href="#">9 900 руб.</a>
         		</div>
@@ -135,7 +135,7 @@
       		<li class="catalog-item">
         		<a href="#"><img src="img/img-mishka.jpg"  width="360" height="576"  alt="Шаблон изделий ручной работы"></a>
         		<div class="template-hover">
-		            <h3>Mishka</h3>
+		            <h3><a class="template-hover-link" href="#">Mishka</a></h3>
 		            <p>Вязаные корзинки</p>
 		            <a href="#">9 900 руб.</a>
         		</div>
@@ -144,7 +144,7 @@
       		<li class="catalog-item">
 		        <a href="#"><img src="img/img-aplus.jpg"  width="360" height="576"  alt="Шаблон сайта для онлайн-обучения"></a>
 		        <div class="template-hover">
-		            <h3>А+</h3>
+		            <h3><a class="template-hover-link" href="#">А+</a></h3>
 		            <p>Сайт для учебы</p>
 		            <a href="#">9 900 руб.</a>
         		</div>
@@ -153,7 +153,7 @@
       		<li class="catalog-item">
 		        <a href="#"><img src="img/img-kvast.jpg"  width="360" height="576"   alt="Шаблон производителя кваса - Кваст"></a>
 		        <div class="template-hover">
-		            <h3>Кваст</h3>
+		            <h3><a class="template-hover-link" href="#">Кваст</a></h3>
 		            <p>Крафтовый квас</p>
 		            <a href="#">9 900 руб.</a>
         		</div>
