--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
 <body>
 <header class="main-header">
 	<nav class="main-navigation">
-		<a class="logo">
-			<img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
-		</a>
-		
-		<ul class="site-navigation">
-			<li><a href="#">Студия</a></li>
-			<li><a href="#">Клиенты</a></li>
-			<li><a href="catalog.html">Магазин</a></li>
-			<li><a href="#">Контакты</a></li>
-		</ul>
-		
-		<ul class="user-navigation">
-			<li><a href="">Корзина</a></li>
-		</ul>
+		<div class="main-navigation-wrapper">
+			<div class="container">
+			<a class="logo">
+				<img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
+			</a>
+				<ul class="site-navigation">
+					<li><a href="#">Студия</a></li>
+					<li><a href="#">Клиенты</a></li>
+					<li><a href="catalog.html">Магазин</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+				
+				<ul class="user-navigation">
+					<li><a href="">Корзина</a></li>
+				</ul>
+			</div>
+		</div>
 	</nav>
 </header>
-	<main>
+	<main class="container">
   	<h1 class="visually-hidden">Студия дизайна Nerds</h1>
 
  	<section class="catalog">
@@ -59,15 +62,17 @@
 </main>
 
 <footer class="main-footer">
-		<ul class="footer-social">
-			<li><a class="social-button visually-hidden" href="#">ВКонтакте</a></li>
-			<li><a class="social-button visually-hidden" href="#">Фейсбук</a></li>
-			<li><a class="social-button visually-hidden" href="#">Инстаграм</a></li>
-		</ul>
+		<div class="container">
+			<ul class="footer-social">
+				<li><a class="social-button visually-hidden" href="#">ВКонтакте</a></li>
+				<li><a class="social-button visually-hidden" href="#">Фейсбук</a></li>
+				<li><a class="social-button visually-hidden" href="#">Инстаграм</a></li>
+			</ul>
 
-		<div class="footer-copyright">
-			<p class="footer-h"> Давайте дружить, это выгодно!</p>
-			<p>Скидка 10% для друзей из социальных сетей.</p>
+			<div class="footer-copyright">
+				<p class="footer-h"> Давайте дружить, это выгодно!</p>
+				<p>Скидка 10% для друзей из социальных сетей.</p>
+			</div>
 		</div>
 </footer>
 
