--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,6 @@
   <body>
 	<header class="main-header">
 		<nav class="main-navigation">
-        <div class="main-navigation-wrapper">
         <div class="container">
   		<a class="logo" href="index.html">
         		<img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
@@ -27,12 +26,14 @@
   			</ul>
           </div>
       </div>
+              <h1 class="page-title">Магазин готовых шаблонов</h1>
+
 		</nav>
+
 	</header>
 	
 	<main class="container">
-		<h1 class="page-title">Магазин готовых шаблонов</h1>
-  <div class="catalog-columns">
+  <div class="catalog-columns container">
   		<section class="filters">
       		<h2 class="visually-hidden">Фильтры</h2>
         		<form class="filter" method="get" action="#">
@@ -169,9 +170,9 @@
   <footer class="main-footer">
       <div class="container">
         <ul class="footer-social">
-          <li><a class="social-button visually-hidden" href="#">ВКонтакте</a></li>
-          <li><a class="social-button visually-hidden" href="#">Фейсбук</a></li>
-          <li><a class="social-button visually-hidden" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#">ВКонтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
         </ul>
 
         <div class="footer-copyright">
