--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <body>
 <header class="main-header">
 	<nav class="main-navigation">
-		<div class="main-navigation-wrapper">
 			<div class="container">
-			<a class="logo">
-				<img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
-			</a>
+				<a class="logo">
+					<img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
+				</a>
 				<ul class="site-navigation">
 					<li><a href="#">Студия</a></li>
 					<li><a href="#">Клиенты</a></li>
@@ -25,7 +24,6 @@
 					<li><a href="">Корзина</a></li>
 				</ul>
 			</div>
-		</div>
 	</nav>
 </header>
 	<main class="container">
@@ -33,7 +31,7 @@
 
  	<section class="catalog">
   		<h2 class="visually-hidden">Наши услуги</h2>
-    		<ul class="catalog-list">
+    		<ul class="catalog-service container">
     			<li class="catalog-item">
 	    			<h3>
 	      				<a class="web-sites" href="#">Веб-сайты</a>
@@ -64,9 +62,9 @@
 <footer class="main-footer">
 		<div class="container">
 			<ul class="footer-social">
-				<li><a class="social-button visually-hidden" href="#">ВКонтакте</a></li>
-				<li><a class="social-button visually-hidden" href="#">Фейсбук</a></li>
-				<li><a class="social-button visually-hidden" href="#">Инстаграм</a></li>
+				<li><a class="social-button" href="#">ВКонтакте</a></li>
+				<li><a class="social-button" href="#">Фейсбук</a></li>
+				<li><a class="social-button" href="#">Инстаграм</a></li>
 			</ul>
 
 			<div class="footer-copyright">
