--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 <header class="main-header">
-	<nav class="main-navigation">
-			<div class="container">
+	<nav class="main-navigation container">
 				<a class="logo">
 					<img src="img/nerds-logo.svg" width="160" height="67" alt="Логотип магазина шаблонов для сайта">
 				</a>
@@ -23,15 +22,13 @@
 				<ul class="user-navigation">
 					<li><a href="">Корзина</a></li>
 				</ul>
-			</div>
 	</nav>
 </header>
 	<main class="container">
   	<h1 class="visually-hidden">Студия дизайна Nerds</h1>
-
- 	<section class="catalog">
+ 	<section class="service">
   		<h2 class="visually-hidden">Наши услуги</h2>
-    		<ul class="catalog-service container">
+    		<ul class="catalog-service">
     			<li class="catalog-item">
 	    			<h3>
 	      				<a class="web-sites" href="#">Веб-сайты</a>
@@ -52,26 +49,24 @@
 	      			<h3>
 	      				<a class="web-sites" href="#">Презентации</a>
 	      			</h3>
-	      			<p>Вы даже не подозреваете, насколько вы изумительны!</p>
+	      			<p>Вы даже не подозреваете, насколько Вы изумительны!</p>
 	      			<a class="button button-yellow" href="#">Заказать</a>
 	    		</li>
     	</ul>
   </section>
 </main>
 
-<footer class="main-footer">
-		<div class="container">
+<footer class="main-footer container">
 			<ul class="footer-social">
-				<li><a class="social-button" href="#">ВКонтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">Инстаграм</a></li>
+				<li><a class="social-button visually-hidden" href="#">ВКонтакте</a></li>
+				<li><a class="social-button visually-hidden" href="#">Фейсбук</a></li>
+				<li><a class="social-button visually-hidden" href="#">Инстаграм</a></li>
 			</ul>
 
 			<div class="footer-copyright">
 				<p class="footer-h"> Давайте дружить, это выгодно!</p>
 				<p>Скидка 10% для друзей из социальных сетей.</p>
 			</div>
-		</div>
 </footer>
 
 <section class="feedback">
