--- a/catalog.html
+++ b/catalog.html
@@ -110,7 +110,7 @@
           		<div class="template-hover">
                   <h3><a class="template-hover-link" href="#">Sedona</a></h3>
               		<p>Информационный сайт для туристов</p>
-              		<a class="block" href="#">9 900 руб.</a>
+              		<a href="#">9 900 руб.</a>
           		</div>
       		</li>
 
