--- a/catalog.html
+++ b/catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Nerds</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
@@ -32,7 +32,7 @@
   <div class="filter-list-wrapper container">
     <section class="templates-filter">
       <h2 class="visually-hidden">Фильтр шаблонов</h2>
-      <form action="https://echo.htmlacademy.ru/" method="GET" class="filter-form">
+      <form action="https://echo.htmlacademy.ru/" method="get" class="filter-form">
         <fieldset class="filter-form-price">
           <legend>Стоимость:</legend>
           <div class="range-drag">
@@ -208,7 +208,7 @@
   </p>
 </footer>
 
-<form class="write-us-form" action="https://echo.htmlacademy.ru/" method="POST">
+<form class="write-us-form" action="https://echo.htmlacademy.ru/" method="post">
   <h2>Напишите нам</h2>
   <div class="write-us-field-container">
     <label>Ваше имя:
