--- a/catalog.html
+++ b/catalog.html
@@ -185,19 +185,16 @@
   <ul class="footer-social">
     <li>
       <a class="social-button social-vk" href="#">
-        <img src="img/vk-icon.svg" alt="vkontake logo" width="26" height="15">
         <span class="visually-hidden">Вконтакте</span>
       </a>
     </li>
     <li>
       <a class="social-button social-fb" href="#">
-        <img src="img/fb-icon.svg" alt="facebook logo" width="12" height="22">
         <span class="visually-hidden">Фейсбук</span>
       </a>
     </li>
     <li>
       <a class="social-button social-insta" href="#">
-        <img src="img/insta-icon.svg" alt="instagram logo" width="21" height="21">
         <span class="visually-hidden">Инстаграмм</span>
       </a>
     </li>
@@ -212,19 +209,19 @@
   <h2>Напишите нам</h2>
   <div class="write-us-field-container">
     <label>Ваше имя:
-      <input class="write-us-field input-field" type="text" name="name" placeholder="Имя Фамилия" required>
+      <input class="write-us-field input-field" type="text" name="login" placeholder="Имя Фамилия">
     </label>
     <label>Ваш e-mail:
-      <input class="write-us-field input-field" type="email" name="email" placeholder="email@example.com" required>
+      <input class="write-us-field input-field" type="email" name="email" placeholder="email@example.com">
     </label>         
   </div>
   <label>Текст письма:</label>
-    <textarea class="write-us-text input-field" rows="5" placeholder="В свободной форме"></textarea>      
+    <textarea class="write-us-text input-field" rows="5" placeholder="В свободной форме" name="text"></textarea>      
   <button class="write-submit-button button button-red" type="submit">Отправить</button>
   <button class="form-button-close" type="button"></button>
 </form>
   
-<script src="js/script.js"></script>
+<script src="js/script-min.js"></script>
 
 </body>
 </html>
